# godot-dead-code-finder

./: .cargoignore  .cursorrules  .gitignore  .pre-commit-config.yaml  .releaserc.json  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json
.github/workflows/: cd.yml  ci.yml  release.yml  semantic-pr.yml
scripts/: bump-cargo.sh  check-commit-msg.sh
src/: cli.rs  lib.rs  main.rs
src/scanner/: analysis.rs  constants.rs  files.rs  gd_definitions.rs  gd_references.rs  mod.rs  models.rs  scan.rs  tscn.rs  util.rs
src/scanner/analysis/: mod.rs  test_referenced.rs  unused.rs
test_project/: main.gd
tests/: analysis.rs  cli.rs  definitions.rs  integration.rs  references.rs  scan.rs  util.rs
tests/common/: mod.rs
