[package]
name = "gdcf"
version = "0.1.0"
description = "CLI tool to find unused functions in Godot GDScript codebases"
edition = "2021"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "godot-dead-code"
path = "src/main.rs"

[lib]
name = "gdcf"
path = "src/lib.rs"
