[package]
name = "gdcf"
version = "1.1.0"
description = "CLI tool to find unused functions in Godot GDScript codebases"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/wozniakpl/godot-dead-code-finder"
keywords = ["godot", "gdscript", "dead-code", "unused", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[[bin]]
name = "godot-dead-code"
path = "src/main.rs"

[[bin]]
name = "gdcf"
path = "src/main.rs"

[lib]
name = "gdcf"
path = "src/lib.rs"
